Add more use-based testing to snakeyaml extension